--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,98 @@ body {
   #77a 100%
   );
 }
-header {
-  margin-top: 30px;
+#logo {
+  position: relative;
+  width: 9.5rem;
+  height: 2rem;
+  top: .8rem;
+  box-shadow: 5px 5px #333;
+  transform: skewX(-15deg);
 }
-form {
+#home {
+  cursor: not-allowed;
+}
+header {
+  position: relative;
+  margin: 30px 30px;
+  text-align: center;
+}
+nav {
+  margin: auto;
+  background-color: #aab;
+  margin-bottom: 60px;
+  text-align: center;
+  max-width: 500px;
+  padding: 10px;
+  border-radius: 50px;
+}
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+a {
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: #668;
+  font-size: 1rem;
+  margin: 5px;
+  padding: 5px 20px;
+  font-weight: bold;
+  letter-spacing: .20rem;
+  border-radius: 5px;
+  width: 200px;
+  color: #eee;
+}
+
+header h1, header p {
+  color: #fff;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.2rem;
+}
+
+p {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 20px;
+}
+
+main {
+  margin: 0 30px;
+}
+.results-main {
+  text-align:center;
+}
+iframe {
+   width: 566px;
+   height: 351px;
+}
+.submitted-body {
+  background: linear-gradient(#77a 0%,
+  #446 8%,
+  #446 80%,
+  #77a 100%
+  );
+}
+.submitted-footer{
+  background-repeat: no-repeat;
+}
+
+fieldset {
+  border: none;
+  border-bottom: 1px solid black;
+  padding: 15px;
+  margin: 10px 0px;
+}
+
+form, .sub-container{
   min-width: 230px;
   max-width: 700px;
   margin: 0 auto;
-  margin-bottom: 100px;
-  background-color: #889;
+  background-color: #99a;
   padding: 5px;
   border-radius: 10px;
   font-size: 1.2rem;
@@ -33,24 +116,64 @@ form {
 select,
 input,
 textarea {
-    border: 1px solid #333;
     background-color: #ccc;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     padding: 5px;
-    width: 100%;
+    width: 95%;
 }
-.fs1 input:valid {
-  border-color: #0c0;
-  background-color: #bcb;
+
+input:valid,
+select:valid {
+  border: 1px solid #0c0;
+  background-color: #E8F0FE;
 }
-.fs1 input:invalid{
-  border-color: #c00;
+
+input:invalid,
+select:invalid {
+  border: 1px solid #f00;
 }
 
 label {
   display: block;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
+}
+
+input + span,
+select + span {
+  position: relative;
+}
+
+span::after {
+  position: absolute;
+  content:"required";
+  top: -2.3rem;
+  right: 5px;
+  color: #ccc;
+  background: #000;
+  padding: 2px 5px;
+  font-size: .95rem;
+  letter-spacing: .09rem;
+}
+select + span::after {
+  right: 25px;
+}
+
+input + span::before {
+  position: absolute;
+  right: -1.5rem;
+}
+
+input:invalid + span::before,
+select:invalid + span::before {
+  content: '✖';
+  color: #f00;
+}
+
+input:valid + span::before,
+select:valid + span::before {
+  content: '✓';
+  color: green;
 }
 
 input:focus,
@@ -62,36 +185,6 @@ textarea:active {
   border-color: #00c;
   background-color: #fff;
   outline: none;
-}
-
-header h1, header p {
-  color: #fff;
-  text-align: center;
-}
-
-h1 {
-  font-size: 2.2rem;
-}
-header p {
-  font-size: 1.2rem;
-  margin-bottom: 30px;
-}
-
-main {
-  margin: 0 30px;
-}
-
-form p {
-  color: #000;
-  text-align: left;
-  margin-bottom: 5px;
-}
-
-fieldset {
-  border: none;
-  border-bottom: 1px solid black;
-  padding: 15px;
-  margin: 10px 0px;
 }
 
 input[type="radio"] {
@@ -111,11 +204,12 @@ input[type="submit"] {
   margin: 20px auto;
   box-shadow: 0 5px #333;
   opacity: .8;
+  border-color: #000;
 }
 input[type="submit"]:hover {
   background-color: #fff;
   opacity: 1;
-  border-color: #00c;
+  cursor: pointer;
 
 }
 input[type="submit"]:active {
@@ -124,12 +218,17 @@ input[type="submit"]:active {
   box-shadow: 0 0 #333;
 }
 
+footer {
+  margin-top: 60px;
+}
+
 footer p {
   text-align: center;
   margin: 5px;
   color: #104;
   font-size: .85rem;
   letter-spacing: .1rem;
+  bottom: 10px;
 }
 
 
@@ -142,14 +241,25 @@ footer p {
     margin: 2px;
     padding: 7px;
   }
+  a {
+    width: 175px;
+  }
+  iframe {
+    transform: scale(.8);
+  }
 }
 
 @media (max-width: 480px){
   :root {
     font-size: 11px;
     }
-
   input {
     margin-bottom: 0px;
+  }
+  a {
+    width: 145px;
+  }
+  iframe {
+    transform: scale(.7);
   }
 }
