--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+p, h1, a, label, input, select, textarea {
   font-size: inherit;
 }
 body {
@@ -16,7 +13,7 @@ body {
   #77a 100%
   );
 }
-#logo {
+.logo {
   position: relative;
   width: 9.5rem;
   height: 2rem;
@@ -24,8 +21,9 @@ body {
   box-shadow: 5px 5px #333;
   transform: skewX(-15deg);
 }
-#home {
+.home {
   cursor: not-allowed;
+  opacity: .7;
 }
 header {
   position: relative;
@@ -46,6 +44,11 @@ ul {
   flex-direction: row;
   justify-content: center;
 }
+
+.header-container {
+  max-width: 500px;
+  margin: auto;
+}
 a {
   box-sizing: border-box;
   display: inline-block;
@@ -60,30 +63,23 @@ a {
   color: #eee;
 }
 
-header h1, header p {
+.title, .description {
   color: #fff;
   text-align: center;
 }
-
-h1 {
+.title {
   font-size: 2.2rem;
+  margin-bottom: 1rem;
 }
-
-p {
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 20px;
+.description {
+  font-size: 1rem;
+  letter-spacing: .18rem;
 }
-
 main {
   margin: 0 30px;
 }
-.results-main {
+.results-container {
   text-align:center;
-}
-iframe {
-   width: 566px;
-   height: 351px;
 }
 .submitted-body {
   background: linear-gradient(#77a 0%,
@@ -91,9 +87,15 @@ iframe {
   #446 80%,
   #77a 100%
   );
+  height: 100vh;
+  text-align: center;
 }
-.submitted-footer{
-  background-repeat: no-repeat;
+.sub-footer{
+  position: absolute;
+  top: 95vh;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 fieldset {
@@ -103,7 +105,7 @@ fieldset {
   margin: 10px 0px;
 }
 
-form, .sub-container{
+form, .sub-container, .results-container{
   min-width: 230px;
   max-width: 700px;
   margin: 0 auto;
@@ -111,6 +113,9 @@ form, .sub-container{
   padding: 5px;
   border-radius: 10px;
   font-size: 1.2rem;
+}
+.results-container {
+  padding: 20px 5px;
 }
 
 select,
@@ -120,7 +125,6 @@ textarea {
     border-radius: 5px;
     margin-bottom: 15px;
     padding: 5px;
-    width: 95%;
 }
 
 input:valid,
@@ -231,8 +235,25 @@ footer p {
   bottom: 10px;
 }
 
+@media (min-width: 769px){
+  select,
+  input,
+  textarea {
+      width: 93%;
+  }
+  select {
+    width: 95%;
+  }
+  .results-iframe {
+     width: 566px;
+     height: 351px;
+  }
+  .results-img {
+    display: none;
+  }
+}
 
-@media (max-width: 768px){
+@media (min-width: 481px) and (max-width: 768px){
   :root {
     font-size: 14px;
     }
@@ -244,8 +265,21 @@ footer p {
   a {
     width: 175px;
   }
-  iframe {
-    transform: scale(.8);
+
+  select,
+  input,
+  textarea {
+      width: 92%;
+  }
+  select {
+    width: 95%;
+  }
+  .results-iframe {
+    display: none;
+  }
+  .results-img {
+    width: 80%;
+    height: auto;
   }
 }
 
@@ -259,7 +293,23 @@ footer p {
   a {
     width: 120px;
   }
-  iframe {
-    transform: scale(.5);
+  select,
+  input,
+  textarea {
+      width: 87%;
   }
+  select {
+    width: 92%;
+  }
+  select + span::after {
+    right: 20px;
+  }
+  .results-iframe {
+    display: none;
+  }
+  .results-img {
+    width: 80%;
+    height: auto;
+  }
+
 }
